# ray-tracer

./: AABB.h  BVHNode.h  CMakeLists.txt  Camera.h  Color3.h  HelperFunctions.h  HitRecord.h  Interval.h  Material.h  MaterialFactory.h  README.md  Ray.h  RenderUtils.h  Renderer.h  Scene.h  Vector3.h  main.cpp
